--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starter template</title>
+    <link rel="icon" sizes="16x16" href="favicon.png" type="image/png" />
   </head>
   <body>
     <div id="content"></div>
